@@ -1,3 +1,9 @@
+2008-03-05  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Check-for-duplicates in TnyFolderObserver and TnyFolderMonitor
+
+	* This was a minor API change
+
 2008-03-04  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Leave on disk, MIME parsing. Highly experimental
